# ragnarok

./: .gitignore  LICENSE  Makefile  README.md  SETUP.md  benchmark.py  benchmark_results_10seeds.csv  benchmark_transfer.py  compute_budget.json  compute_budget_postopt.json  database.db  demo_router.py  evaluate.py  extrapolation_final.json  multi_skill_demo.py  multi_train.py  pilot_bandb_results.json  pilot_bandc_n10_merged.json  pilot_bandc_results.json  pilot_results.json  preregistration.md  pyproject.toml  requirements.txt  run_overnight.sh  run_overnight_bandc.sh  thresholds.json  train.py  transfer_demo.py
blog/: preregistering_against_yourself.md
checkpoints/: cartpole_1776009286_final.pt  cartpole_1776009335_final.pt
client/: client.cpp  client.hpp  client.sln  client.vcxproj  client.vcxproj.filters  main.cpp  ragnarok_client.sln  ragnarok_client.vcxproj  ragnarok_client.vcxproj.filters  worker.cpp  worker.hpp
include/: client.h  game.h  hash.h  list.h  map.h  protocol.h  server.h  single_memory.h  sqlite.h
master/: main.cpp  master.sln  master.vcxproj  master.vcxproj.filters  server.cpp  server.hpp  worker.cpp  worker.hpp
old_client/: client_raylib.sln
old_server/: Makefile
ragnarok/: __init__.py
reviews/: bug_e_fix.md  chronology_audit.md  post_pilot_backlog.md  pre_trc_4agent_review_2026-04-17.md  pre_trc_submit_4agent_review_2026-04-18.md  research_directions.md  transfer_acceleration_review.md
scripts/: bench_device_env.py  bench_device_ppo.py  bench_vec_collection.py  compute_budget_extrapolation.py  device_pilot_run.py  pilot_analysis.py  (+9 more)
(+191 files in other folders)
