[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ragnarok"
version = "0.1.0"
description = "Self-learning modular AI agent with skill memory and dream training"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "gymnasium[classic-control]>=0.29.0",
    "numpy>=1.24.0",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
