[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragnarok"
version = "0.1.0"
description = "Self-learning modular AI agent with skill memory and dream training"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "gymnasium[classic-control]>=0.29.0",
    "numpy>=1.24.0",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
include = ["ragnarok*"]
exclude = ["logs*", "checkpoints*", "skills_data*", "skills_wiring_test*", "venv*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
